--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -88,8 +88,8 @@ input[type="email"],
 textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #68D2E8;
+    border-radius: 40px;
     font-size: 14px;
     color: #333;
 }
@@ -106,15 +106,15 @@ textarea {
 }
 
 .submit-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
+    max-width: auto;
+    padding: 15px;
+    background-color: #68D2E8;
     color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 40px;
     cursor: pointer;
     font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
 .submit-button:hover {
