--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -11,29 +11,30 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f9;
+    background-color: #FEEFAD;
 }
 
 .home-content {
-    text-align: center;
+    
     background-color: #ffffff;
-    padding: 40px;
-    border-radius: 10px;
+    padding: 100px 50px;
+    border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
+    max-width: 750px;
     width: 100%;
 }
 
 h1 {
-    color: #333333;
-    margin-bottom: 20px;
-    font-size: 2.5em;
+    text-align: center;
+    color: #03AED2;
+    margin-bottom: 40px;
+    font-size: 48px;
 }
 
 p {
-    color: #555555;
+    color: #03AED2;
     margin-bottom: 20px;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
 
 .home-links {
