--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -10,6 +10,8 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    height: 100vh;
+    background-color: #FEEFAD;
 }
 
 .login-content {
@@ -22,8 +24,8 @@ body {
     margin-top: 60px; /* To avoid overlap with the fixed navbar */
 }
 
-h2 {
-    color: #333;
+.login-content h2 {
+    color: #03AED2;
     font-size: 2em;
     margin-bottom: 20px;
     text-align: center;
@@ -33,7 +35,8 @@ h2 {
     margin-bottom: 20px;
 }
 
-label {
+.login-content label {
+    color: #03AED2;
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
